fixed pg 8 table

--- a/output/abccare_programcomparison.tex
+++ b/output/abccare_programcomparison.tex
@@ -13,7 +13,7 @@
 \textbf{Eligibility} & Socio-economic disadvantage according to a multi-factor index (see Appendix \ref{appendix:background})&Socio-economic disadvantage according to a multi-factor index (see Appendix \ref{appendix:background}) & \checkmark\\
  \midrule
 \textbf{Control} &&\\
-\hspace{.5cm} N &54&23\\
+\hspace{.5cm} N &56&23\\
 \hspace{.5cm} Treatment Given & Diapers from birth to age 3, unlimited formula from birth to 15 months & Diapers from birth to age 3, unlimited formula from birth to 15 months & \checkmark \\
 \hspace{.5cm} Control   & \treatsubsabc & \treatsubscarec \\
 \hspace{.6cm} Substitution & & \\
@@ -21,7 +21,7 @@
 \textbf{Treatment} & Center-based childcare & Center-based childcare and family education\\
 \hspace{.5cm} \textbf{Center-based} \\
 \hspace{.5cm} \textbf{Childcare} \\
-\hspace{.5cm} N &53 (participated)&17\\
+\hspace{.5cm} N &58 &17\\
 \hspace{.5cm} Intensity &6.5--9.75 hours a day for 50 weeks per year& 6.5--9.75 hours a day for 50 weeks per year & \checkmark\\
 \hspace{.5cm} Components & Stimulation, medical care, nutrition, social services & Stimulation, medical care, nutrition, social services & \checkmark\\
 \hspace{.5cm} Staff-to-child Ratio &1:3 during ages 0--1 &1:3 during ages 0--1 & \checkmark\\
@@ -36,7 +36,8 @@
 \hspace{.5cm} Staff Qualifications &&Home visitor training\\
 \midrule
  \textbf{School-age Treatment} \\
- \hspace{.5cm} N& 46 &39\\
+ \hspace{.5cm} Treatment N& 49 &39\\
+  \hspace{.5cm} Control N& 47 &22\\
 \hspace{.5cm} Intensity & Every other week& Every other week & \checkmark\\
 \hspace{.5cm} Components & Parent-teacher meetings& Parent-teacher meetings & \checkmark\\
 \hspace{.5cm} Curriculum & Reading and math &  Reading and math & \checkmark\\
