--- a/output/abc_compromises.tex
+++ b/output/abc_compromises.tex
@@ -14,19 +14,19 @@ Case & Initial Assignment & Compromise Description & Age at Departure & Data Ava
 6&Control  & Death (age 0), heart disease & 0 &  Baseline; before dead & Attrition after death \\
 7&Treatment & Death (age 0), SIDS & 0 &  Baseline; before dead & Attrition after death \\
 8&Treatment  & Death (age 4), pedestrian accident & 4 &  Baseline; before dead & Attrition after death \\ \midrule
-9&Treatment  & Non-compliance  & 8 &  Baseline; before age 8 & Attrition after age 8  \\
-10&Treatment  & Non-compliance  & 8 &  Baseline; before age 8 & Attrition after age 8  \\
-11&Treatment  & Non-compliance  & 8 &  Baseline; before age 8 & Attrition after age 8  \\ \midrule
-12&Control        & Crossover from control to treatment & 8 &  Baseline; before age 8 & Attrition after age 8  \\ \midrule
-13&Treatment   & 3 months of treatment & N/A &   Baseline; after age 2 & Same as treatment group  \\  
-14&Treatment &10 months of treatment & N/A  &   Baseline; after age 2 & Same as treatment group  \\
-15&Treatment & 6 months of treatment &  N/A &   Baseline; after age 2 & Same as treatment group  \\ 
-16&Treatment & 9 months of treatment & N/A  &   Baseline; after age 2 & Same as treatment group  \\  \midrule
+9&Treatment  & Non-compliance  & Do not depart &  Baseline; before age 8 & Attrition after age 8  \\
+10&Treatment  & Non-compliance  & Do not depart&  Baseline; before age 8 & Attrition after age 8  \\
+11&Treatment  & Non-compliance  & Do not depart &  Baseline; before age 8 & Attrition after age 8  \\ \midrule
+12&Control        & Crossover from control to treatment & Do not depart &  Baseline; before age 8 & Attrition after age 8  \\ \midrule
+13&Treatment   & 3 months of treatment & 3 months &   Baseline; after age 2 & Same as treatment group  \\  
+14&Treatment &10 months of treatment & 10 months &   Baseline; after age 2 & Same as treatment group  \\
+15&Treatment & 6 months of treatment &  6 months &   Baseline; after age 2 & Same as treatment group  \\ 
+16&Treatment & 9 months of treatment & 9 months  &   Baseline; after age 2 & Same as treatment group  \\  \midrule
 17&Control  & Left study at 54 months & 54 months &  Baseline; before 54 months & Attrition after 54 months \\ \midrule
 18& Treatment       & Developmentally delayed at 6 months & 6 months &  No data after diagnosis & Dropped (non-eligible) \\ 
 19&Treatment       & Developmentally delayed at 3 years & 3 &  No data after diagnosis & Dropped (non-eligible) \\ \midrule
-20&Control       & Crossover from control to treatment & 8 &  Baseline, before age 8 & Attrition after age 8 \\ 
-21&Control       & Crossover from control to treatment & 8 &  Baseline, before age 8 & Attrition after age 8   \\ \bottomrule
+20&Control       & Crossover from control to treatment & Do not depart &  Baseline, before age 8 & Attrition after age 8 \\ 
+21&Control       & Crossover from control to treatment & Do not depart &  Baseline, before age 8 & Attrition after age 8   \\ \bottomrule
 \end{tabular}
 \begin{tablenotes}
 \item Note: This table describes the various randomization compromises in ABC. For each subject, we display: the nature of the compromise, the available data, and the methodological assumption when accounting for non-compliance and program attrition. The case numbers do not have anything to do with individual identifiers of program participants. 
