edits to appendix

--- a/AppOutput/Methodology/nonipw_vars.tex
+++ b/AppOutput/Methodology/nonipw_vars.tex
@@ -2,7 +2,7 @@
 % CAN BE COPIED INTO A SPREADSHEET PROGRAM (EXCEL, LIBRECALC) FOR EDITING
 \begin{tabular}{l l}
 \toprule
-Completely Observed Outcomes	&	Age	\\
+Completely Observed Outcomes	&	Age (years) \\
 \midrule			
 IQ Standard Score	&			2, 3, 3.5, 4, 4.5, 5, 12, 15, 21	\\
 PIAT Math Standard Score	&	7	\\
