--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -17,8 +17,8 @@
 
 
 %\externaldocument{abc_comprehensivecba_appendix}
-\externaldocument{abc_comprehensivecba_appendix-pub}
-\externaldocument{abc_comprehensivecba_answerstoreferees}
+\externaldocument{abc_comprehensivecba_appendix-pub_2018-07-11c_jlg}
+\externaldocument{abc_comprehensivecba_answerstoreferees_2018-07-11c_jlg}
 
 \titlespacing{\section}{0pc}{.35pc}{.35pc}
 \titlespacing{\subsection}{0pc}{.35pc}{.35pc}
@@ -111,7 +111,7 @@ This paper addresses a fundamental problem that arises in evaluating social prog
 
 As a byproduct, we also address the problem of aggregating evidence from the multiplicity of treatment effects found in ABC/CARE. We estimate economically interpretable aggregates: internal rates of return and benefit/cost ratios that monetize the large array of benefits and costs generated. In constructing these aggregates, we account for model estimation, forecasting error, and the welfare cost of taxation to fund programs. Our estimates survive extensive sensitivity analyses.
 
-We construct synthetic cohorts from non-experimental samples. The cohorts are chosen to approximate the life cycles of experimentals in their post-experimental years. We formulate and estimate production functions that predict program treatment effects and assess their forecast accuracy within sample. Some of the inputs of the estimated production functions are changed by treatment and are measured in both experimental and non-experimental samples. If the production functions mapping inputs to outputs across cohorts are unaffected by treatment (i.e., are ``treatment invariant''), we can safely use them to forecast treatment effects at older ages provided that we accurately forecast the path of future inputs. We test and do not reject treatment invariance in experimental and non-experimental samples that overlap in age.\footnote{See \cite{Hurwicz_1962_structural} for the definition of policy invariance. We build on the methodology of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who relate intermediate and long-term outcomes in a mediation analysis. However, they do not construct out of sample forecasts.} We forecast experimental treatment effects using our estimated production functions applied to non-experimental data with inputs and outputs suitably adjusted for cohort effects.
+We construct synthetic cohorts from non-experimental samples. The cohorts are chosen to approximate the life cycles of experimentals in their post-experimental years. We formulate and estimate production functions that predict program treatment effects and assess their within-sample forecast accuracy. Some of the inputs of the estimated production functions are changed by treatment and are measured in both experimental and non-experimental samples. If the production functions mapping inputs to outputs across cohorts are unaffected by treatment (i.e., are ``treatment invariant''), we can safely use them to forecast treatment effects at older ages provided that we accurately forecast the path of future inputs. We test and do not reject treatment invariance in experimental and non-experimental samples that overlap in age.\footnote{See \cite{Hurwicz_1962_structural} for the definition of policy invariance. We build on the methodology of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who relate intermediate and long-term outcomes in a mediation analysis. However, they do not construct out of sample forecasts.} We forecast experimental treatment effects using our estimated production functions applied to non-experimental data with inputs and outputs suitably adjusted for cohort effects.
 
 Our analysis is a template for estimating the life-cycle gains of social experiments for which there is less than full lifetime follow-up. Supplementing experimental data with non-experimental data using economic and econometric theory enhances the validity of long-run forecasts of experimental results.
 
@@ -168,7 +168,7 @@ For all $\bm{x}, \bm{b} \in supp(\bm{X}^d_{k,a}, \bm{B}_k), k \in \{e,n\}$, and 
 \bm{\phi}_{k,a}^0 \left( \bm{x}, \bm{b} \right) &= \bm{\phi}_{k,a}^1 (\bm{x}, \bm{b}) \nonumber \\                                                                      &= \bm{\phi}_{a} (\bm{x}, \bm{b}), \label{eq:crucialres}
 \end{align}
 %
-where $\bm{\phi}_{a}(\bm{x}, \bm{b})$ is the common (across $d$ and $k$) structural function generating the deterministic portion of the effect of $ \bm{B}_k=\bm{b}, \bm{X}^d_{k,a}=\bm{x}$ on outcomes and 
+where $\bm{\phi}_{a}(\bm{x}, \bm{b})$ is the common (across $d$ and $k$) structural function generating the deterministic portion of the effect of $ \bm{B}_k=\bm{b}, \bm{X}^d_{k,a}=\bm{x}$ on outcomes and
 %
 \begin{eqnarray}
 F_{k,a}^0 \left( \cdot | \text{\textbf{ Fix }} \bm{X}_{k,a}^d = \bm{x}, \bm{B}_{k} = \bm{b} \right) &=& F_{k,a}^1 \left( \cdot  | \text{\textbf{ Fix }} \bm{X}_{k,a}^d = \bm{x}, \bm{B}_{k} = \bm{b} \right) \nonumber \\
@@ -178,7 +178,7 @@ F_{k,a}^0 \left( \cdot | \text{\textbf{ Fix }} \bm{X}_{k,a}^d = \bm{x}, \bm{B}_{
 where $F_{k,a}^j \left( \bm{z} | \text{\textbf{ Fix }} \bm{\Omega} = \bm{\omega} \right)$ denotes the distribution of $\bm{Z}$ for $\bm{\Omega}$ fixed at $\bm{\omega}$ and $F_a \left( \bm{z} | \text{\textbf{ Fix }} \bm{\Omega} = \bm{\omega} \right)$ is the distribution of the errors of the production functions that are assumed to be common across treatment regimes. $\square$
 \end{assumption}
 
-We clarify Assumption~\ref{ass:summary} with three remarks: 
+We clarify Assumption~\ref{ass:summary} with three remarks:
 
 \begin{remark} \textbf{There are Two Distinct Aspects of Structural Invariance}
 Assumption~\ref{ass:summary} has two distinct aspects that can be resolved further into two separate assumptions: (i) structural relationships and distributions evaluated at the same arguments have identical values for treatment and control groups in the experimental sample, and (ii) analogous conditions hold across the experimental and non-experimental samples. Condition (ii) enables analysts to simulate treatment and control outcomes in non-experimental samples.
@@ -189,7 +189,7 @@ A second aspect of Assumption~\ref{ass:summary}, that the structural relationshi
 \end{remark}
 
 \doublespacing
-To test Assumption~\ref{ass:summary} in the experimental and non-experimental samples and to make accurate forecasts at age $a > a^*$, we require the common support conditions formalized next and tested in Appendix~\ref{app:containsupport}:
+To test Assumption~\ref{ass:summary} in the experimental and non-experimental samples and to make accurate forecasts at age $a > a^*$, we require the common support conditions that we now formalize. They are tested in Appendix~\ref{app:containsupport}:
 
 
 \onehalfspacing
@@ -246,7 +246,7 @@ Below we discuss how this condition can be weakened and unbiased forecasts can s
 
 To appreciate the benefit of Assumption~\ref{ass:exog}, consider the following example. Suppose that we use years of education as a component of $\bm{X}^{d'}_{k,{a''}}$. The joint distribution of $\bm{\varepsilon}_{k,a}^d$ and $\bm{X}^{d'}_{k,{a''}}$ can differ substantially across experimental and non-experimental samples. In the experimental sample, years of education are boosted by treatment, which is randomly assigned. In the non-experimental samples, however, there is no experimental variation. Individuals with high observed levels of education could have high values of $\bm{\varepsilon}_{k,a}^d$ due to omitted ability. This creates a fundamentally different joint distribution between $\bm{\varepsilon}_{k,a}^d$ and $\bm{X}_{k,{a''}}^{d'}$ in the non-experimental sample. Assumption~\ref{ass:exog} avoids this problem when making forecasts. Below, we establish that our forecasts are in accord with forecasts from approaches that do not necessarily require Assumption~\ref{ass:exog}.
 
-\textbf{Step 3. Determining Inputs.} Analysis of the non-experimental data reveals that the inputs determining labor income under the Assumption~\ref{ass:exog} are: average PIAT achievement score from ages 5 to 7, completed education, labor income at age 21, and lagged labor income. Table~\ref{table:predlaborincome} shows that these variables predict labor income. Appendix~\ref{app:containsupport} shows that there is common support across data sets. We report tests for endogeneity of these variables in the experimental and auxiliary samples used in this paper in Appendix~\ref{appendix:methodology}.\footnote{To do so, we assume that $\bm{\varepsilon}_{k,a}^d, k \in \{e,n\}$ follows a factor structure. Factor structure models are widely used in structural estimation of production functions of skills during early childhood. See, e.g., \citet{Cunha_Heckman_2008_JHR} and \citet{Cunha_Heckman_etal_2010_est_tech_cognoncog}.} After conditioning on $\bm{X}_{k,a}^d$ and $\bm{B}_{k}$, we do not reject the null hypothesis of exogeneity. Accordingly, we use OLS for making baseline estimates.
+\textbf{Step 3. Determining Inputs.} Analysis of the non-experimental data reveals that the inputs determining labor income under the Assumption~\ref{ass:exog} are: average PIAT achievement score from ages 5 to 7, completed education, labor income at age 21, and lagged labor income. Table~\ref{table:predlaborincome} shows that these variables predict labor income. Appendix~\ref{app:containsupport} shows that there is common support across data sets. We report tests for endogeneity of these variables in the experimental and auxiliary samples used in this paper in Appendix~\ref{appendix:methodology}.\footnote{To do so, we assume that $\bm{\varepsilon}_{k,a}^d, k \in \{e,n\}$ follows a factor structure. Factor structure models are widely used in structural estimation of production functions of skills during early childhood. See, e.g., \citet{Cunha_Heckman_2008_JHR} and \citet{Cunha_Heckman_etal_2010_est_tech_cognoncog}.} After conditioning on $\bm{X}_{k,a}^d$ and $\bm{B}_{k}$, we do not reject the null hypothesis of exogeneity. Accordingly, we use OLS for making our baseline estimates.
 
 Table~\ref{table:summint} displays the treatment effects of the program for these inputs.\footnote{We first present raw treatment-control mean differences. As we report in Table~\ref{table:summint}, the treatment effects are substantial across multiple outcomes. In some cases, this finding is at odds with what other studies report \citep{Ramey_etal_1985_Project-CARE_TiECSE,Clarke_Campbell_1998_ABC_Comparison_ECRQ,Campbell_Pungello_etal_2001_DP,Campbell_Ramey_etal_2002_ADS,Campbell_Wasik_etal_2008_ECRQ,Campbell_Conti_etal_2014_EarlyChildhoodInvestments}. The difference is explained, mainly, by the fact that we consider effects by gender.  Only \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} consider treatment effects by gender. They focus on health effects and find that men have many more positive effects especially in cardiovascular and metabolic conditions if compared to women. This is consistent with the results we report below.} Assignment to treatment has statistically and economically significant causal effects on the inputs generating final outcome treatment effects. Our forecast treatment effects are based on these program-induced changes in inputs. For females, it increases the average PIAT score by almost one third of a standard deviation.\footnote{The test is standardized to an in-sample standard deviation of 15 units.} For males, the effect is almost half of a standard deviation. The program substantially boosts high-school graduation for females and college graduation for both males and females. We use years of education attained to summarize both effects in a measure that is comparable across genders. Labor income at age 21 for girls is not greatly boosted by the program. This arises in part because treated girls are more likely to be enrolled in college at age 21 and thus do not work at that age. The program boosts annual labor income, especially for males, for whom the average treatment effect at age 30 is almost 20 thousand dollars.\footnote{Table~\ref{table:summint} displays age-21 and age-30 labor income because labor income is observed at ages 21 and 30 in the experimental sample. Labor income at age 30 is an input in our methodology only after age 30.}
 
@@ -347,7 +347,7 @@ Observations & \multicolumn{2}{c}{829} & \multicolumn{2}{c}{746}  \\
 \begin{tablenotes}
 \footnotesize
 \item Note for Panel (a): Estimates of the coefficients in Equation~\eqref{eq:linearexp} for labor income at age 30 by gender within the experimental sample. $R$ denotes the treatment indicator ($R = 0$ for control-group individuals and $R = 1$ for treatment-group individuals). $\bm{B}_{e,30}$ is comprised of age-30 baseline variables not affected by treatment (mother's education at birth) and $\bm{X}_{e,30}^d$ is age-30 intermediate inputs. We drop labor income observations above the 95 percentile to avoid precision issues.\\
-\item Note for Panel (b): Estimates of the coefficients in Equation~\eqref{eq:linearnoexp} for labor income at age 30 by gender pooling the experimental treatment and control groups and the synthetic cohort at age 30. $K$ denotes membership to the experimental or non-experimental sample ($K = 0$ synthetic cohort in the non-experimental sample and $K = 1$ experimental sample). $\bm{B}_{k,30}$ is comprised of age-30 baseline variables not affected by treatment (mother's education at birth) and $\bm{X}_{k,30}^d$ is age-30 intermediate inputs.
+\item Note for Panel (b): Estimates of the coefficients in Equation~\eqref{eq:linearnoexp} for labor income at age 30 by gender pooling the experimental treatment and control groups and the synthetic cohort at age 30. $K$ denotes membership to the experimental or non-experimental sample ($K = 0$ synthetic cohort in the non-experimental sample and $K = 1$ experimental sample). $\bm{B}_{k,30}$ is comprised of age-30 baseline variables not affected by treatment (mother's education at birth) and $\bm{X}_{k,30}^d$ is age-30 intermediate inputs. \textbf{[JJH: Jorge, tables 2 and 3 should have parallel formats!]}
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
@@ -359,7 +359,7 @@ Define $K = \bm{\mathit{1}}\left( k = e\right)$. The coefficient on $K$, denoted
 \end{equation}
 \end{subequations}
 
-Panel (c) in Table~\ref{table:invariance} displays estimates of the parameters of Equation~\eqref{eq:linearnoexp} for labor income at age 30 for males and females. Estimates of $\pi$ are small and not statistically significant.\footnote{The averages of labor income in the experimental and non-experimental sample for females and males are $\$24,584$ and $\$40,007$, and  $\$24,098$ and $\$32,717$ (2014 USD), respectively.} We do not reject the null hypothesis that the technologies are invariant across samples so the data are consistent with invariance. 
+Panel (c) in Table~\ref{table:invariance} displays estimates of the parameters of Equation~\eqref{eq:linearnoexp} for labor income at age 30 for males and females. Estimates of $\pi$ are small and not statistically significant.\footnote{The averages of labor income in the experimental and non-experimental sample for females and males are $\$24,584$ and $\$40,007$, and  $\$24,098$ and $\$32,717$ (2014 USD), respectively.} We do not reject the null hypothesis that the technologies are invariant across samples so the data are consistent with invariance.
 
 We use analogous procedures to test Condition~\eqref{eq:strucinvarianceF} of Assumption~\ref{ass:summary}. First, we test invariance in the distributions of $\bm{\varepsilon}_{k,a}^d$ across treatment regimes within the experimental sample for labor income at age 30. Then, invoking invariance across treatment regimes, we test invariance across the experimental and non-experimental residual distributions. Residuals are generated from the estimated forecasting model in Equation~\eqref{eq:outcome} assuming a linear technology. We adjust the residuals for model estimation error as explained in step 6 of Appendix~\ref{appendix:bootstrapspreds}.
 
@@ -462,7 +462,7 @@ Any childcare inducements of the program likely benefit parents who, at baseline
 
 \section{Estimates and Sensitivity Analysis} \label{section:cbaresults}
 
-\noindent Figure~\ref{figure:main} summarizes our findings. It displays the discounted (using a 3\% discount rate) life-cycle benefits and costs of the program (2014 USD) pooled across genders, over all outcome categories, and for separate categories as well.\footnote{Using discount rates of 0\%, 3\%, and 7\%, the estimates for the benefit/cost ratios are 17.40 (s.e.\ 5.90), 7.33 (s.e.\ 1.84), and 2.91 (s.e.\ 0.59), respectively. We report estimates for discount rates between 0\% and 15\% in  Appendix~\ref{appendix:varying-discount-rate}.} These benefits are the inputs of our baseline estimates for the annual internal rates of return and benefit/cost ratios. We conduct extensive sensitivity and robustness analyses to produce ranges of plausible values for the estimates of the internal rate of return (8.0,\ 18.3) and benefit/cost ratio (1.52,\ 17.40). 
+\noindent Figure~\ref{figure:main} summarizes our findings. It displays the discounted (using a 3\% discount rate) life-cycle benefits and costs of the program (2014 USD) pooled across genders, over all outcome categories, and for separate categories as well.\footnote{Using discount rates of 0\%, 3\%, and 7\%, the estimates for the benefit/cost ratios are 17.40 (s.e.\ 5.90), 7.33 (s.e.\ 1.84), and 2.91 (s.e.\ 0.59), respectively. We report estimates for discount rates between 0\% and 15\% in  Appendix~\ref{appendix:varying-discount-rate}.} These benefits are the inputs of our baseline estimates for the annual internal rates of return and benefit/cost ratios. We conduct extensive sensitivity and robustness analyses to produce ranges of plausible values for the estimates of the internal rate of return (8.0,\ 18.3) and benefit/cost ratio (1.52,\ 17.40).
 
 The costs of the program are substantial, as frequently been noted by critics.\footnote{See, e.g., \citet{Fox_News_2014_Head_Start_Effects} and \citet{Whitehurst_2014_Senate_Testimony}.} But so are the benefits, which far outweigh the costs. The individual gains in labor income, parental labor income, crime, and health are at least as large in magnitude as the costs. As a consequence, our measures of social efficiency remain statistically and economically significant even after eliminating the benefits from any one of the four main components that we monetize. No single component drives our results.
 
@@ -519,7 +519,7 @@ Individuals in ABC/CARE could experience positive cohort effects that might (i) 
 
 We also examine the sensitivity of our estimates to (i) dropping the most costly crimes such as murders and rapes;\footnote{Two individuals in the treatment group were convicted of rape and one individual in the control group was convicted of murder.} and (ii) halving the costs of victimization and judiciary costs related to crime. The first sensitivity check is important because we do not want our estimates to be based on a few exceptional crimes. The second is important because estimates of victimization costs are controversial because they are subjective (see  Appendix~\ref{appendix:crime-VI}). Our benefit/cost estimates are robust to these adjustments, even though crime is a major component of it. We also examine the sensitivity with respect to our main health component: quality-adjusted life years. This is an important component because healthier individuals survive longer, and treatment improves health conditions. Since this component is largely realized later in life and thus is heavily discounted, improvements in future medical care have a negligible effect on the estimated life-cycle benefits. Dropping this component or doubling the value of life does not have a major impact on our calculations.
 
-Figure~\ref{figure:vennpooled} summarizes the results from our extensive sensitivity analyses in Table~\ref{table:cba} of Appendix~\ref{appendix:sensitivity}, including the case where only one of the many streams we consider is the source of the benefit. We calculate the estimates with all possible combinations of the main benefit and cost streams. Our measures of economic efficiency remain statistically and economically significant even after eliminating the benefits from any one of the four main components that we monetize.  Overall, our sensitivity analyses indicate that no single category of outcomes drives the social efficiency of the program. Rather, it is the life-cycle benefits across multiple dimensions of human development.
+Figure~\ref{figure:vennpooled} summarizes the results from our extensive sensitivity analyses reported in Table~\ref{table:cba} of Appendix~\ref{appendix:sensitivity}, including the case where only one of the many streams we consider is the source of the benefit. We calculate the estimates with all possible combinations of the main benefit and cost streams. Our measures of economic efficiency remain statistically and economically significant even after eliminating the benefits from any one of the four main components that we monetize.  Overall, our sensitivity analyses indicate that no single category of outcomes drives the social efficiency of the program. Rather, it is the life-cycle benefits across multiple dimensions of human development.
 
 \begin{figure}[H]
 \caption{Benefit/Cost Ratio and Internal Rate of Return when Accounting for Different Combinations of the Main Benefits}\label{figure:vennpooled}
@@ -537,7 +537,7 @@ Note: This figure presents all possible combinations of accounting for the benef
 
 \begin{table}[!htpb]
 \begin{threeparttable}
-\caption{Alternative Benefit/Cost Analyses Calculations}
+\caption{Estimates of Benefit/Cost Ratios Under Different Assumptions}
 \label{table:comparing}
 \centering
 \footnotesize
@@ -574,11 +574,11 @@ Our methodology provides a more accurate estimate of the benefits and costs of t
 
 \section{Summary} \label{section:conclusion}
 
-\noindent This paper presents a template for constructing economically-interpretable summaries of the multiple treatment effects generated from a randomized evaluation of a high-quality, widely emulated early childhood program with follow up through the mid 30s. We go beyond the usual practice of reporting batteries of treatment effects. We report the costs and monetize the treatments across numerous domains. We estimate the tax-adjusted internal rate of return and the benefit/cost ratio of the program. These aggregates assess the social efficiency of the program.
+\noindent This paper presents a template for constructing economically interpretable summaries of the multiple treatment effects generated from a randomized evaluation of a high-quality, widely emulated early childhood program with follow-up through the mid 30s. We go beyond the usual practice of reporting batteries of treatment effects. We report the costs and monetize the treatments across numerous domains. We estimate the tax-adjusted internal rate of return and the benefit/cost ratio of the program. These aggregates assess the social efficiency of the program.
 
-We use auxiliary information and economic models to guide monetization of mid 30s treatment effects and extrapolate them to the full life cycles of participants. We account for model estimation and forecast error and conduct extensive sensitivity analyses of the consequences of alternative assumptions and methodologies to obtain our estimates. Under a variety of plausible assumptions, we estimate that the tax-adjusted internal rate of return of the program ranges from 1.5 to 17.4. These empirical results demonstrate that investing in this influential program is socially profitable.
+We use auxiliary information and economic models to guide monetization of mid 30s treatment effects and to extrapolate these benefits to the full life cycles of participants. We account for model estimation and forecast error and conduct extensive sensitivity analyses of the consequences of alternative assumptions and methodologies used to obtain our estimates. Under a variety of plausible assumptions, we estimate that the tax-adjusted internal rate of return of the program ranges from 1.5 to 17.4. These empirical results demonstrate that investing in this influential program is socially profitable.
 
-We conclude with a cautionary note. The program we study was targeted to a disadvantaged, primarily African-American population in a university town in North Carolina. Blind generalization of our findings to other populations is not warranted. In particular, there is no support in this study for universal application of ABC/CARE across all socio-economic groups. The essential features of the ABC/CARE approach are in wide use in a variety of childcare programs around the world that target disadvantaged populations. Our analysis has lessons of general applicability to disadvantaged populations resembling those targeted by ABC/CARE. Our study indicates what is possible and the possibilities are substantial.
+We conclude with a cautionary note. The program we study was targeted to a disadvantaged, predominately African-American population in a university town in North Carolina. Blind generalization of our findings to other populations is clearly not warranted. In particular, there is no support in this study for universal application of ABC/CARE across all socio-economic groups. However, the essential features of the ABC/CARE approach are currently in wide use in a variety of early childhood intervention programs around the world that target disadvantaged children. Our analysis has lessons of general applicability to disadvantaged populations resembling those targeted by ABC/CARE. Our study indicates what is possible and the possibilities are substantial.
 
 %References
 \singlespace
