--- a/output/abccare_programcomparison.tex
+++ b/output/abccare_programcomparison.tex
@@ -35,7 +35,7 @@
 \hspace{.5cm} Staff-to-child Ratio &&1:1\\
 \hspace{.5cm} Staff Qualifications &&Home visitor training\\
 \midrule
- \textbf{School-age Treatment} \\
+ \textbf{School-age Treatment [\textbf{[JJH: We do not even use this] [JLG: But we mention it and this is Appendix material. Do you want it dropped?]}} \\
  \hspace{.5cm} Treatment N& 49 &39\\
   \hspace{.5cm} Control N& 47 &22\\
 \hspace{.5cm} Intensity & Every other week& Every other week & \checkmark\\
