--- a/abc_comprehensivecba_revised.tex
+++ b/abc_comprehensivecba_revised.tex
@@ -17,8 +17,8 @@
 
 
 %\externaldocument{abc_comprehensivecba_appendix}
-\externaldocument{abc_comprehensivecba_appendix-pub_2018-07-11c_jlg}
-\externaldocument{abc_comprehensivecba_answerstoreferees_2018-07-11c_jlg}
+\externaldocument{abc_comprehensivecba_appendix-pub}
+\externaldocument{abc_comprehensivecba_answerstoreferees}
 
 \titlespacing{\section}{0pc}{.35pc}{.35pc}
 \titlespacing{\subsection}{0pc}{.35pc}{.35pc}
@@ -60,7 +60,7 @@ University of Southern California}
 \thispagestyle{empty}
 
 \bigskip
-\noindent \textbf{[JLG: We need 39 pages so that we comply to the 41 pages limit when the tables and figures are broken into two pages when needed. Update: Same. We are still at 38 pages.]} \\
+\noindent \textbf{[JLG: Update: Same. We are still at 38 pages of the 41 needed.]} \\
 
 \begin{abstract}
 \noindent This paper quantifies and aggregates the multiple life-cycle benefits of an influential high-quality early childhood program with outcomes measured through midlife. Guided by economic theory, we supplement experimental data with non-experimental data to forecast the life-cycle benefits and costs of the program. Our point estimate of the internal rate of return is 13.7\% with an associated benefit/cost ratio of 7.3. We account for model estimation and forecasting error and present estimates from extensive sensitivity analyses. This paper is a template for synthesizing experimental and non-experimental data using economic theory to estimate the long-run life-cycle benefits of social programs.
@@ -189,8 +189,7 @@ A second aspect of Assumption~\ref{ass:summary}, that the structural relationshi
 \end{remark}
 
 \doublespacing
-To test Assumption~\ref{ass:summary} in the experimental and non-experimental samples and to make accurate forecasts at age $a > a^*$, we require the common support conditions that we now formalize. They are tested in Appendix~\ref{app:containsupport}:
-
+To test Assumption~\ref{ass:summary} in the experimental and non-experimental samples and to make accurate forecasts at age $a > a^*$, we require the common support conditions that we now formalize. They are tested in Appendix~\ref{app:containsupport}.
 
 \onehalfspacing
 \begin{assumption} \label{ass:contain} \textbf{Support and Input Forecast Conditions}
@@ -347,7 +346,8 @@ Observations & \multicolumn{2}{c}{829} & \multicolumn{2}{c}{746}  \\
 \begin{tablenotes}
 \footnotesize
 \item Note for Panel (a): Estimates of the coefficients in Equation~\eqref{eq:linearexp} for labor income at age 30 by gender within the experimental sample. $R$ denotes the treatment indicator ($R = 0$ for control-group individuals and $R = 1$ for treatment-group individuals). $\bm{B}_{e,30}$ is comprised of age-30 baseline variables not affected by treatment (mother's education at birth) and $\bm{X}_{e,30}^d$ is age-30 intermediate inputs. We drop labor income observations above the 95 percentile to avoid precision issues.\\
-\item Note for Panel (b): Estimates of the coefficients in Equation~\eqref{eq:linearnoexp} for labor income at age 30 by gender pooling the experimental treatment and control groups and the synthetic cohort at age 30. $K$ denotes membership to the experimental or non-experimental sample ($K = 0$ synthetic cohort in the non-experimental sample and $K = 1$ experimental sample). $\bm{B}_{k,30}$ is comprised of age-30 baseline variables not affected by treatment (mother's education at birth) and $\bm{X}_{k,30}^d$ is age-30 intermediate inputs. \textbf{[JJH: Jorge, tables 2 and 3 should have parallel formats!]}
+\item Note for Panel (b): Estimates of the coefficients in Equation~\eqref{eq:linearnoexp} for labor income at age 30 by gender pooling the experimental treatment and control groups and the synthetic cohort at age 30. $K$ denotes membership to the experimental or non-experimental sample ($K = 0$ synthetic cohort in the non-experimental sample and $K = 1$ experimental sample). $\bm{B}_{k,30}$ is comprised of age-30 baseline variables not affected by treatment (mother's education at birth) and $\bm{X}_{k,30}^d$ is age-30 intermediate inputs. 
+\item \textbf{[JJH: Jorge, tables 2 and 3 should have parallel formats!] [JLG: In Table 2 you requested that we included Panels (b) and (d), which are not really tests of invariance. We can cut those out and put them in the Appendix and then have only Panels (a) and (c). That would then mirror Table 3. Please let me know if you OK this change or you have something else in mind. In my opinion, Panels (b) and (d) are useful to inform the reader on precision.]}
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
