--- a/Appendices/Background.tex
+++ b/Appendices/Background.tex
@@ -158,6 +158,27 @@ Please note that in Table~\ref{table:abccompromises} there is a difference betwe
 \subsection{Chronology of Attrition}
 
 
+Over time, various subjects in both ABC and CARE left the studies for different reasons. We describe the chronology of this attrition.
+
+\subsubsection{ABC}
+
+Before randomization, there was an initial pool of 123 subjects from 120 families. Four subjects left the study even before baseline data could be collected. In addition, 3 subjects died before 6 months of age and 2 subjects were diagnosed as mentally disabled making them ineligible for the study. The sample at the beginning of the study is thus 114 subjects (56 in the control group, 58 in the treatment group). 
+
+Before age 5, an additional subject died. Public officials requested that 2 control-group subjects be moved to the treatment group due to extremely impoverished home conditions. Three treatment-group subjects and 1 control-group subject did not comply with the randomization. The researchers at FPG continued collecting data on these 3 cases of non-compliance until age 8 when the researchers decided to halt data collection on these non-compliant cases. 
+
+After age 5, 1 subject moved away from the study area and 7 subjects attrited from the study. At age 21, 99 subjects participated in the data collection (51 in the control group, 48 in the treatment group).
+
+Between age 21 and 30, 2 subjects died and 4 of the 7 attrited subjects were recovered leading to an age-30 sample of 101 subjects (52 in the control group, 49 in the treatment group).
+
+Many subjects were not included in the age-34 data collection because they had to travel to go to a clinic rather than having at-home visitors, which is how the previous data collections were done. Because of this inconvenience to the subjects, data are only available on 72 subjects (34 in the control group, 38 in the treatment group).
+
+
+\subsubsection{CARE}
+
+We describe the chronology of attrition for the two experimental groups that we use in the data (the control group and the group that received center-based childcare and family education). Before randomization, there were 40 subjects. Four moved away from the study area. Between the start of the program and age 5, there was no attrition. 
+
+Four subjects attrited after age 5 and were not recovered at later data collections. In the age-34 medical sweep, data were collected on 22 subjects (11 in the control group, 11 in the treatment group).
+
 \subsection{Program Description and Content}
 
 \subsubsection{Goals}
